# qcm-extrqctor-v2

./: .dockerignore  .env.example  .gitattributes  .gitignore  DEPLOY_PHASE_A_B_D.md  Dockerfile  FRONTEND_REDESIGN_IMPLEMENTATION_PLAN.md  PHASE_C_PLAN.md  PHASE_E2_OCR_PLAN.md  PHASE_E_PLAN.md  PHASE_F_PLAN.md  README.md  app.py  package-lock.json  package.json  pyproject.toml  requirements.txt
docs/: extension_scenarios.md  fixture_inventory.md  plan_01_completion_notes.md  plan_02_auth_tenancy.md  plan_03_database_schema_rls_and_migrations.md  plan_04_storage_artifacts_quotas_and_cleanup.md  plan_05_backend_domain_api_and_provider_foundation.md  plan_06_persistent_tasks_workers_and_terminal_events.md  plan_07_step1_ingestion_extraction_and_ocr_correction.md  plan_08_combined_step2_orchestrator.md  plan_09_combined_step2_qcm_page_processing.md  plan_10_combined_step2_metadata_cas_clinique_and_structuring.md  plan_11_step3_correction_processing.md  plan_12_step4_similarity_match_compatibility.md  plan_13_frontend_design_system_and_application_shell.md  plan_14_frontend_projects_pipeline_history_results_and_terminal.md  plan_15_manual_auto_run.md  plan_16_ai_auto_run.md  plan_17_infrastructure_deployment_observability_and_free_tier.md  plan_18_testing_security_migration_and_release.md  repository_boundaries.md
infra/: env.schema.json
migrations/: 0001_profiles_projects.sql  0002_runs_tasks_artifacts.sql  0003_step_specific.sql  0004_legacy_import_validation.sql  0005_task_kind_aliases.sql  README.md
prompts/: README.md
tests/: __init__.py  test_ai_autorun.py  (+20 more)
(+158 files in other folders)
