[project]
name = "qcm-reengineered"
version = "0.1.0"
description = "Re-engineered multi-user QCM processing system foundation."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "pydantic>=2.8",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
  "packages/domain/src",
  "packages/application/src",
  "packages/infrastructure/src",
  "packages/observability/src",
  "packages/shared/src",
  "apps/api/src",
  "apps/worker/src",
]
